UNRELEASED:

2022-03-14-02:

- Fixed broken expander buttons on the Poetry page.
- Updated pronouns.page cards.

2022-03-14:

- Added icons to the website's appearance in browser search bars, bookmarks, etc.
- Fixed a broken link on the Home page.
- The colour of the Grafeas Group logo is no longer handled weirdly on dark mode.
- JavaScript updates:
    - Moved single-page scripts to scripts/js/single.
    - Added a script for the Home page to automatically calculate my age.
    - Changed as many instances of camelCase as possible to snake_case, as it is superior.
    - Shortened some variable names.
    - Slightly optimised constructor script.
- Slight clarification on the Terms & Privacy page.

2022-01-27:

- Switched main website and repository host to Codeberg.
    - Added original GitHub repository as a push mirror for the Codeberg repository.
    - Changed most GitHub references to Codeberg references.
    - Kept GitHub pages site as a mirror to cover any Codeberg downtime not directly related to commits.
    - Made the domain listed in the footer copyright notice vary depending on which instance is being viewed.
    - Added Codeberg site to the status monitor.
- Updated Home page:
    - Removed 'Welcome' section.
    - Added yin-yang logo as an avatar image.
    - Horizontally centred elements.
- Moved Writing section of the Endeavours page to part of the new 'Writing' page.
    - Created Poetry subpage for the new Writing page.
- Updated Accounts page:
    - Added Codeberg entry.
    - Relegated DeviantArt to the inactive account list.
- Switched all remaining PNG images to WEBP, resulting in a 20%-60% reduction in file size in most cases.
- Fixed cookie handling on Chromium (tested on Chromium Ungoogled & Falkon).
- Switched to using pre-line whitespace.
- Updated figcaption styling:
    - Increased font size.
    - Removed italics.
- Adjusted positioning of the theme & font buttons.
- Removed unused 'class="empty"' declarations in some pages' body tags.
