@@ -14,7 +14,7 @@
         <!-- Styling -->
         <link id="structure" rel="stylesheet" href="../static/css/universal.css">
         <link id="theme" rel="stylesheet" href="../static/css/themes/theme_dark.css">
-        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/linux-libertine" type="text/css"/>
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/linux-biolinum" type="text/css"/>
         <link id="font" rel="stylesheet" href="../static/css/themes/font_serif.css">
         <link rel="stylesheet" href="../static/css/extensions/empty.css">
         <link id="favicon" rel="shortcut icon" type="image/webp" href="../static/img/favicons/main.webp">
