@@ -1,5 +1,5 @@
 html {
-    font-family: 'LinuxLibertineORegular';
+    font-family: 'LinuxBiolinumRegular';
     font-weight: normal;
     font-style: normal;
 }
